[package]
name = "rusticata-macros"
version = "1.1.0"
description = "Helper macros for Rusticata"
license = "MIT/Apache-2.0"
keywords = ["parser","nom","serialize"]
homepage = "https://github.com/rusticata/rusticata-macros"
repository = "https://github.com/rusticata/rusticata-macros.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

[dependencies]
nom = {version = "4.0"}
