[package]
name = "rusticata-macros"
version = "4.1.0"
description = "Helper macros for Rusticata"
license = "MIT/Apache-2.0"
keywords = ["parser","nom","serialize"]
homepage = "https://github.com/rusticata/rusticata-macros"
repository = "https://github.com/rusticata/rusticata-macros.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
edition = "2018"
rust-version = "1.63"
categories = ["parsing"]
readme = "README.md"

[dependencies]
nom = { version = "7.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["nom/std"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "nom",
    "nom::*",
]
